--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <li><a href="#features">MENU</a></li>
             <li><a href="#services">SERVICES</a></li>
             <li><a href="#galleries">RECOGNITION</a></li>
+            <li><a href="#testimonials">REVIEWS</a></li>
             <li><a href="#contact">CONTACT US</a></li>
         </ul>
     </div></section>
@@ -155,6 +156,29 @@
         </div>
         </div>
 
+</section>
+
+
+<section id="testimonials">
+    <div class="'title-text">
+    
+        <h1> What our Customers says</h1>
+    </div>
+    <div class="testimonial-row">
+         <div class="testimonial-col">
+         <p>Calorie Crave is an amazing restaurant with the perfect blend of health and happiness. 
+            I love the ambience and food. Can't wait to visit again.</p>
+    
+         </div>
+             <div class="testimonial-col">
+                <p>Calorie Crave is an amazing restaurant with the perfect blend of health and happiness. 
+            I love the ambience and food. Can't wait to visit again.</p>
+             </div>
+          <div class="testimonial-col">
+            <p>Calorie Crave is an amazing restaurant with the perfect blend of health and happiness. 
+            I love the ambience and food. Can't wait to visit again.</p>
+          </div>
+    </div>
 </section>
 
 
