--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
 <div class="container">
 <div class="gallery">
                 
-                <div class="img-box"><h3>food1</h3></div>
-                <div class="img-box"><h3>food2</h3></div>
-                <div class="img-box"><h3>food3</h3></div>
-                <div class="img-box"><h3>food4</h3></div>
-                <div class="img-box"><h3>food5</h3></div>
-                <div class="img-box"><h3>food6</h3></div>
-                <div class="img-box"><h3>food7</h3></div>
-                <div class="img-box"><h3>food8</h3></div>
+                <div class="img-box"><br><h3>food1</h3></br></div>
+                <div class="img-box"><br><h3>food2</h3></br></div>
+                <div class="img-box"><br><h3>food3</h3></br></div>
+                <div class="img-box"><br><h3>food4</h3></br></div>
+                <div class="img-box"><br><h3>food5</h3></br></div>
+                <div class="img-box"><br><h3>food6</h3></br></div>
+                <div class="img-box"><br><h3>food7</h3></br></div>
+                <div class="img-box"><br><h3>food8</h3></br></div>
                 
             </div>
         </div>
